@@ -1,3 +1,7 @@
+2009-03-05  Petr Machata  <pmachata@redhat.com>
+
+	* dwarflint.c: Add --nohl command line switch.
+
 2009-01-28  Petr Machata  <pmachata@redhat.com>
 
 	* dwarflint.c: Coding style cleanups.
